# ComputerAnimation_HW_Sth

./: CMakeLists.txt  glad.c  main.cpp  readme.md  temp.h
img/: assistance.pptx
include/glad/: glad.h
release/: input.txt
src/: CMakeLists.txt  Joint.cpp  Joint.h  Shader.cpp  Shader.h  fragment_shader.fs  glClass.cpp  glClass.h  globalFunction.h
